<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddMedicineScheduleActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="1dp"
        app:cardElevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <SearchView
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:focusable="false"
            android:gravity="center_vertical|start"
            android:iconifiedByDefault="false"
            android:queryHint="@string/search_products"
            android:searchSuggestThreshold="2"
            android:textSize="16sp">

            <requestFocus />
        </SearchView>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/frequency"
        android:textColor="@color/_000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <RadioButton
            android:id="@+id/rb_daily"
            android:layout_width="120dp"
            android:checked="true"
            android:layout_height="wrap_content"
            android:text="@string/daily"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rb_dow"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:minWidth="60dp"
            android:text="@string/custom"
            android:textSize="18sp" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="7"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <CheckBox
            android:id="@+id/cb_mon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="M" />

        <CheckBox
            android:id="@+id/cb_tue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="T" />

        <CheckBox
            android:id="@+id/cb_wed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="W" />

        <CheckBox
            android:id="@+id/cb_thurs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="T" />

        <CheckBox
            android:id="@+id/cb_fri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="F" />

        <CheckBox
            android:id="@+id/cb_sat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="S" />

        <CheckBox
            android:id="@+id/cb_sun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="S" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_dose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/dose"
        android:textColor="@color/_000000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_doses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        tools:itemCount="3"
        tools:listitem="@layout/dose_line_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dose" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        android:id="@+id/cv_add_dose"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/rv_doses">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_add_dose"
            android:padding="12dp"
            android:text="Add Dose"
            android:textSize="18sp"
            android:textStyle="bold"
            android:drawablePadding="16dp"
            app:drawableStartCompat="@drawable/baseline_add_24" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_schedule_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/schedule_start"
        android:textColor="@color/_000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/et_start_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_start_date" />

    <EditText
        android:id="@+id/et_start_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:editable="false"
        android:hint="Start Date"
        android:inputType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_schedule_start"
        app:layout_constraintTop_toBottomOf="@+id/cv_add_dose" />

    <TextView
        android:id="@+id/tv_schedule_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/schedule_end"
        android:textColor="@color/_000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/et_end_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_end_date" />

    <EditText
        android:id="@+id/et_end_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:hint="End Date"
        android:inputType="none"
        android:editable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_schedule_start"
        app:layout_constraintTop_toBottomOf="@+id/et_start_date" />

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_end_date" />

</androidx.constraintlayout.widget.ConstraintLayout>